--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,22 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@babel/traverse": "^7.25.9"
+  },
   "dependencies": {
-    "@strapi/plugin-documentation": "^4.6.0",
-    "@strapi/plugin-graphql": "^4.6.0",
-    "@strapi/plugin-i18n": "4.6.0",
-    "@strapi/plugin-users-permissions": "4.6.0",
-    "@strapi/strapi": "4.6.0",
+    "@strapi/plugin-documentation": "5.4.0",
+    "@strapi/plugin-graphql": "5.4.0",
+    "@strapi/plugin-i18n": "4.25.13",
+    "@strapi/plugin-users-permissions": "5.4.0",
+    "@strapi/strapi": "5.4.0",
     "better-sqlite3": "^8.1.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "^6.0.0",
     "strapi-plugin-meilisearch": "^0.9.1",
-    "strapi-plugin-transformer": "^3.0.0"
+    "strapi-plugin-transformer": "^3.0.0",
+    "styled-components": "^6.0.0"
   },
   "author": {
     "name": "ByteDream"
